[package]
name = "thread-safe"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Container that allows thread safety for thread-unsafe objects"
keywords = ["threading"]
repository = "https://github.com/bread-graphics/thread-safe"
homepage = "https://github.com/bread-graphics/thread-safe#readme"
